--- a/package.json
+++ b/package.json
@@ -3,22 +3,57 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.2.3"
-  },
-  "devDependencies": {
-    "typescript": "^5",
+    "@codemirror/autocomplete": "^6.18.6",
+    "@codemirror/commands": "^6.8.0",
+    "@codemirror/language": "^6.10.8",
+    "@codemirror/lint": "^6.8.4",
+    "@codemirror/search": "^6.5.10",
+    "@codemirror/state": "^6.5.2",
+    "@codemirror/view": "^6.36.4",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^6.1.1",
+    "@tailwindcss/postcss": "^4",
+    "@types/jest": "^27.5.2",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4"
+    "@uiw/codemirror-extensions-classname": "^4.23.10",
+    "@uiw/codemirror-extensions-langs": "^4.23.10",
+    "@uiw/react-codemirror": "^4.23.3",
+    "babel-preset-es2017": "^6.24.1",
+    "core-js": "^3.41.0",
+    "js-beautify": "^1.15.4",
+    "next": "15.2.3",
+    "p5": "^1.11.0",
+    "query-string": "^9.1.1",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-resizable-panels": "^2.1.7",
+    "react-router-dom": "^6.26.2",
+    "tailwindcss": "^4",
+    "types": "^0.1.1",
+    "typescript": "^5",
+    "uuid": "^11.1.0",
+    "uuidv4": "^6.2.13",
+    "web-vitals": "^2.1.4"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.25.9",
+    "@babel/core": "^7.26.10",
+    "@babel/preset-env": "^7.26.9",
+    "@types/babel__generator": "^7.6.8",
+    "@types/babel__traverse": "^7.20.6",
+    "@types/js-beautify": "^1.14.3",
+    "@types/p5": "^1.7.6",
+    "babel-preset-env": "^1.7.0",
+    "html-webpack-plugin": "^5.6.3",
+    "prettier": "3.3.3"
   }
 }
